--- a/localization/crystal_harbinger.string_table.xml
+++ b/localization/crystal_harbinger.string_table.xml
@@ -68,7 +68,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="french">
@@ -139,7 +139,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="german">
@@ -210,7 +210,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="spanish">
@@ -281,7 +281,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="brazilian">
@@ -352,7 +352,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="russian">
@@ -423,7 +423,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="polish">
@@ -494,7 +494,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="czech">
@@ -565,7 +565,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="italian">
@@ -636,7 +636,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="schinese">
@@ -707,7 +707,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="japanese">
@@ -778,7 +778,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="koreanb">
@@ -849,7 +849,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>
   <language id="koreana">
@@ -920,7 +920,7 @@
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Shard gleams...{colour_end} Why is it looking at me like that...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_crystalline_gaze"><![CDATA[{colour_start|crystal_trophy}Dispose crystals...{colour_end} This can't be, it really can't...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Return to shards...{colour_end} I never seen my shells shake like that...]]></entry>
-	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defect this time...]]></entry>
+	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Galaxy amoung stars...{colour_end} Was I really defected this time...]]></entry>
 	<entry id="revenant_deadlist+str_monster_attack_timewarp_eye"><![CDATA[{colour_start|crystal_trophy}Your future ends...{colour_end} What about my future, what did it mean by that...]]></entry>
 	</language>	
 	</root>
